2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Cancel download if http redirect is bounded more than 20 times.
	* src/AbstractCommand.cc
	* src/HttpSkipResponseCommand.cc
	* src/Request.cc
	* src/Request.h
	* test/RequestTest.cc

2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed unhandled exception(removed keyword `new').
	* src/SocketCore.cc (initEPOLL)

2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
	
	Removed visit(const MetaEntry*)
	* src/MetaEntryVisitor.h:
	Added visit(const Data*),visit(const Dictionary*),visit(const List*)
	and made them virtual.
	* src/BencodeVisitor.h
	* src/BencodeVisitor.cc

2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated po files.
	* po/aria2c.pot
	* po/*.po
	* po/*.gmo

2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Moved the call setWriteCheckSocket inside the previous clause to reduce
	the number of socket to watch out.
	* src/PeerInteractionCommand.cc

2008-06-16  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	When there is not enough space in disk when writing a chunk of data,
	aria2 now prints the message to the console to warn user and aborts
	its download. Not all downloads are canceled because some downloads
	may use another disk or partition. BUG#1640332
	* src/AbstractDiskWriter.cc
	* src/PeerAbstractCommand.cc
	* src/PeerAbstractCommand.h: Added onFailure() function for override.
	* src/PeerInteractionCommand.cc: In onFailure(), call RequestGroup::
	setHaltRequested(true) to cancel download.
	* src/PeerInteractionCommand.h
	
2008-06-16  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Applied Ross's aria2-0.13.2+1-mingw-5.patch, which changes the type of
	socket from int to sock_t as sockets are unsigned in Windows.
	For AsyncNameResolver, DownloadEngine, I did additional modification
	for the portion of the code changed according to epoll support.
	I defined sock_t in a2netcompat.h to use sock_t without including