@@ -1,5 +1,11 @@
 2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Made _epEvents a member variable.
+	* src/DownloadEngine.cc
+	* src/DownloadEngine.h
+
+2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Cancel download if http redirect is bounded more than 20 times.
 	* src/AbstractCommand.cc
 	* src/HttpSkipResponseCommand.cc
